Use old-style connects if new-style connects fail

For reasons we don't understand the new-style connects fail on Windows
if used from the resolver application. Debugging shows that the function
pointers of the signals are different from the ones Qt expects.

GnuPG-bug-id: 6813
(cherry picked from commit d44b78f1b988dbc9dbe80453a6a39b9cd48eb685)